--- a/github_blog/projects/templates/account/login.html
+++ b/github_blog/projects/templates/account/login.html
@@ -1,7 +1,7 @@
 <!-- templates/account/login.html -->
 {% extends "base.html" %}
 
-{% block title %}Login | Project Building{% endblock %}
+{% block title %}Project Building{% endblock %}
 
 {% block content %}
 <section id="login">
