--- a/github_blog/projects/templates/base.html
+++ b/github_blog/projects/templates/base.html
@@ -6,6 +6,9 @@
     {% load socialaccount %}
 
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic:wght@400..700&family=Vazirmatn:wght@100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}ساختمان حل مساله{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'projects/css/style.css' %}">
